# home-ledger

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml  (+1 more)
services/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  ruff.toml  setup.py
services/api/alembic/: env.py
services/api/alembic/versions/: 20260627_0001_initial.py  20260628_0002_maintenance_completion_history.py  20260628_0003_household_memberships.py  20260628_0004_household_invites.py  20260628_0004_item_attachments.py  20260628_0005_household_invites.py
services/api/app/: main.py
services/api/app/api/: dependencies.py  document_storage.py  household_access.py  router.py
services/api/app/core/: config.py  errors.py  logging.py  rate_limit.py  security.py
services/api/app/db/: base.py  session.py
services/api/app/models/: attachment.py  document.py  household.py  household_invite.py  item.py  maintenance.py  user.py
services/api/app/schemas/: attachments.py  auth.py  common.py  exports.py  households.py  items.py
services/api/app/scripts/: seed.py
services/api/tests/: conftest.py  test_archived_item_maintenance.py  test_auth.py  test_authorization.py  test_household_export.py  test_household_invite_codes.py  test_household_invite_config.py  test_household_invites.py  test_household_memberships.py  test_inventory_export.py  test_item_attachments.py  test_items.py  test_maintenance.py  test_maintenance_history.py  test_token_boundaries.py  test_warranty_filters.py
(+142 files in other folders)
