[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "homeledger-api"
version = "0.1.0"
description = "Self-hosted API for HomeLedger."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "pwdlib[argon2]>=0.2,<1",
  "pydantic-settings>=2.7,<3",
  "PyJWT>=2.10,<3",
  "psycopg[binary]>=3.2,<4",
  "SQLAlchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "ruff==0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
exclude = ["app/api/routes/households.py"]
